--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">MaxTasks</string>
+    <string name="action_settings">Settings</string>
+    <string name="channel_name">test</string>
+    <string name="channel_description">test description</string>
 
     <string name="select_task_type">Task Type</string>
 
